--- a/KonnexAirBus/src/app/app.component.html
+++ b/KonnexAirBus/src/app/app.component.html
@@ -11,7 +11,7 @@
           <a class="btn btn-outline-info me-2" aria-current="page" [routerLink]="['/welcome']">Home</a>
         </li>&nbsp;
         <li class="nav-item">
-          <a class="btn btn-outline-info me-2" [routerLink]="['/login']" (click)="onLogin()">Login</a>
+          <a class="btn btn-outline-info me-2" [routerLink]="['/login']">Login</a>
         </li>
         &nbsp;
           <li class="nav-item">
