--- a/KonnexAirBus/src/app/components/homepage/homepage.component.html
+++ b/KonnexAirBus/src/app/components/homepage/homepage.component.html
@@ -1,27 +1,41 @@
 
-<div class="card">
+<div class="container">
+<div class="row">
+<div class="card col">
   <div class="card-header">
   
   </div>
   <div class="card-body">
     <div class="container-fluid">
       <div class="text-center">
-        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSWX9LZMIDPyVFk4sfaohYQPFvmYB6KKrGxR0O8FcyXKnQ1LCPRysCQa3V5z520OelB3iQ&usqp=CAU"
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQnH3of9Lx-9YWLsPeCcRyXmbnNZpUbxQN9tw&usqp=CAU"
              class="img-responsive center-block"
-             style="max-height:300px;padding-bottom:50px" />
+             style="max-height:200px;padding-bottom:50px" />
       </div>
+      <div>
+        <p>
+          Hi,This is a page containing some functionalities.
 
+        </p>
+      </div>
       <div class="text-center">Developed by:</div>
       <div class="text-center">
         <h3>TechLinguists</h3>
       </div>
-
-      <div class="text-center">@deborahkurata</div>
+     
+      <div class="text-center">@techLinguists</div>
       <div class="text-center">
-        <a href="http://www.bit.ly/DeborahKsBlog">www.bit.ly/DeborahKsBlog</a>
+        <a href="#">www.bit.ly/nothing</a>
       </div>
+   
     </div>
   </div>
+</div>
+<div class="col col-lg-3">
+  <pm-products></pm-products>
+
+</div>
+</div>
 </div>
 
    
