--- a/KonnexAirBus/src/app/components/login/login.component.html
+++ b/KonnexAirBus/src/app/components/login/login.component.html
@@ -1,6 +1,8 @@
-<div class="card text-center shadow">
+<div class='loginClass'>
+<div class="card text-center shadow" >
+
     <h5 class="card-header">Login</h5>
-        <div class="card-body row">
+        <div class="card-body row" style="padding: 30px; margin: 0px 40px 0px 40px;">
            
             <form (ngSubmit)="onSubmit()">
                 <div class="form-group">
@@ -14,6 +16,7 @@
                
                 <div>
                 <button type="submit" class="btn btn-primary">Login</button>
+                &nbsp;
                 <button type="reset" color="accent">
                     Reset
                 </button>
@@ -22,4 +25,5 @@
            
         </div>
         
+</div>
 </div>
