--- a/KonnexAirBus/src/app/app.component.html
+++ b/KonnexAirBus/src/app/app.component.html
@@ -10,26 +10,39 @@
         <li class="nav-item">
           <a class="btn btn-outline-info me-2" aria-current="page" [routerLink]="['/welcome']">Home</a>
         </li>&nbsp;
-        <li class="nav-item">
-          <a class="btn btn-outline-info me-2" [routerLink]="['/login']">Login</a>
-        </li>
+        
         &nbsp;
-          <li class="nav-item">
+          <li class="nav-item" *ngIf='onLogin()'>
             <a class="btn btn-outline-info me-2" [routerLink]="['/products']">Product List</a>
           </li>
-        <li class="nav-item">
-          <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-        </li>
-      </ul>
+        
+      
+      
       <form class="d-flex">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search"> 
+        &nbsp;
         <button class="btn btn-outline-success" type="submit">Search</button>
       </form>
+
+      <div style="margin-left: 50rem;">
+        <li class="nav-item" *ngIf='!onLogin()'>
+           <a class="btn btn-outline-info me-2" [routerLink]="['/login']" >Login</a>
+         </li>
+      </div>
+      <div style="margin-left: 50rem;">
+        <li class="nav-item" *ngIf='onLogin()'>
+          <a class="btn btn-outline-secondary me-2" [routerLink]="['/']" (click)='onLogout()' >Log Out</a>
+        </li>
+      </div>
+      </ul>
     </div>
   </div>
  </nav>
 <div class='container'>
+
 <router-outlet></router-outlet>
+
+
 </div>
 
  
