--- a/KonnexAirBus/src/app/components/home/welcome.component.html
+++ b/KonnexAirBus/src/app/components/home/welcome.component.html
@@ -6,20 +6,23 @@
   <div class="card-body">
     <div class="container-fluid">
       <div class="text-center">
-        <img src="./assets/images/logo.jpg"
-             class="img-responsive center-block"
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSWX9LZMIDPyVFk4sfaohYQPFvmYB6KKrGxR0O8FcyXKnQ1LCPRysCQa3V5z520OelB3iQ&usqp=CAU"
+            class="img-responsive center-block"
              style="max-height:300px;padding-bottom:50px" />
       </div>
-
+      <div>
+        <p>Hello,Welcome to the airbus konnex Page.<br>This is the first page.</p>
+      </div>
       <div class="text-center">Developed by:</div>
       <div class="text-center">
-        <h3>Deborah Kurata</h3>
+        <h3>Tech Linguists</h3>
       </div>
-
-      <div class="text-center">@deborahkurata</div>
+     
+      <div class="text-center">@techLinguists</div>
       <div class="text-center">
-        <a href="http://www.bit.ly/DeborahKsBlog">www.bit.ly/DeborahKsBlog</a>
+        <a href="#">www.bit.ly/nothing</a>
       </div>
     </div>
   </div>
+
 </div>
